--- a/css/style.css
+++ b/css/style.css
@@ -951,7 +951,7 @@ p.slide-numbering.left {
 .slide--8__left-block img {
   position: relative;
   width: 11.3em;
-  margin-right: 1.5em;
+  margin-right: 0.8em;
 }
 .slide--8__left-block p {
   font-size: 2.6em;
@@ -1514,13 +1514,23 @@ p.slide-numbering.left {
   left: 50%;
   transform: translateX(-50%);
   width: 100em;
-  height: 100%;
+  height: 108em;
   background-image: url(../images/sl14-right-img.webp);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   mask-image: linear-gradient(to right, transparent 0%, black 10%);
   -webkit-mask-image: linear-gradient(to right, transparent 0%, black 10%);
+}
+.slide--14__right img.bottle {
+  position: absolute;
+  top: 9.5em;
+  left: 50%;
+  transform: translateX(calc(-50%));
+  width: 25.5em;
+  height: 79em;
+  object-fit: fill;
+  z-index: 2;
 }
 /*#endregion sl14*/
 
